multiple_containers/kubernetes/worker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1 # number of containers/pods
  selector:
    matchLabels:
      component: worker # id of deployment
  template:
    metadata:
      labels:
        component: worker # id of deployment
    spec:
      containers:
      - name: worker
        image: adam/multi-worker
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
