multiple_containers/kubernetes/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3 # number of containers/pods
  selector:
    matchLabels:
      component: server # id of deployment
  template:
    metadata:
      labels:
        component: server # id of deployment
    spec:
      containers:
      - name: server
        image: adam/multi-server
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000 # port mapped to multi-server image
---
# service / networking
# can be in separate file
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: server
  ports:
  - port: 5000
    targetPort: 5000
